# Daiy

./: .CODING_STANDARDS.md  .env.example  .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ERROR_TRACKING.md  LICENSE  LOGGING.md  MEMORY_OPTIMIZATION.md  Makefile  PIPELINE.md  PUBLISH_CHECKLIST.md  QUICKSTART.md  README.md  RENDER_ERROR_LOGS.md  SECURITY_CONSENT_REDIRECTS.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  FIXES.md  devcontainer.json
archive/99spokes example/: SampleBikeSpecs-2025-06-11.xlsx
archive/grounded_demo/: README.md  catalog.py  demo.py
daiy_web/: README.md  app.py  config.py  view_logs.py
daiy_web/templates/: index.html
data/: bc_products_sample.csv
data/sampleData/: bc_products_sample.csv
grounded_demo/: catalog.py  demo.py
logs/: vision_flow_test_result.json
scrape/: README.md  __init__.py  backfill_dynamic_specs.py  cli.py  config.py  csv_utils.py  db.py  discover_categories.py  discover_fields.py  html_utils.py  list_bc.txt  logging_config.py  models.py  scrape_bc.py  scraper.py  shutdown.py  url_validation.py  view_data.py  workflows.py
scrape/tests/: __init__.py  test_dynamic_specs.py  test_pagination_extraction.py
scripts/: README.md  get_render_errors.py  import_bike_data.py  setup_database.sh
web/: FLOW.md  GENERALIZATION_DESIGN.md  README.md  api.py  api_v2.py  app.py  candidate_selection.py  catalog.py  categories.py  config.py  disclaimer.txt  error_logging.py  image_utils.py  job_identification.py  logging_utils.py  privacy.py  prompts.py  purge.py  test_model_clarification.py  test_model_clarification_extended.py  timing.py  view_errors.py  view_logs.py  view_performance.py
web/static/: README.md
web/static/css/: base.css  components.css  products.css
web/static/js/: api.js  clarification.js  config.js  image.js  main.js  products.js  state.js  utils.js
web/templates/: consent.html  index.html  index.html.backup  index_old.html  privacy.html
web/tests/: README.md  conftest.py  test_api_endpoints.py  test_candidate_selection.py  test_empty_categories_flow.py  test_error_handling.py  test_error_logging.py  test_job_identification_prompt.py  test_memory_usage.py  test_model_clarification.py  test_model_clarification_extended.py  test_model_settings.py  test_privacy.py  test_recipe_format.py  test_timing_example.py  test_unit_data_structures.py  test_vision_flow.py
(+1 files in other folders)
