[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daiy"
version = "0.1.0"
description = "Grounded AI for DIY shopping"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tim Klausmann", email = "hello@daiy.de"}
]
keywords = ["bikes", "ai", "recommendations", "grounding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Enthusiasts",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "Flask>=3.1.2",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
database = [
    "psycopg2-binary>=2.9.9",
]

[project.urls]
Homepage = "https://daiy.de"
Documentation = "https://github.com/tim06927/daiy"
Repository = "https://github.com/tim06927/daiy.git"
Issues = "https://github.com/tim06927/daiy/issues"

[tool.setuptools]
packages = ["scrape", "grounded_demo", "daiy_web"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "W191",  # indentation contains tabs
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
